feat: update default JAVA_OPTS